<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tr.org.uni_talk.ui.SplashScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/use_unitalk"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/country_code"
        android:id="@+id/countryCode"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignTop="@+id/phoneNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="RtlHardcoded"
        android:layout_above="@+id/registerButton" />

    <EditText
        android:layout_width="wrap_content"

        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneNumber"
        android:layout_alignParentRight="true"


        android:textSize="40sp"
        android:layout_above="@+id/registerButton"
        android:cursorVisible="false"
        android:layout_height="55dp"
        android:hint="@string/phone_number"
        android:background="@drawable/rounded_text_field"
        android:layout_toRightOf="@+id/countryCode"
        android:layout_toEndOf="@+id/countryCode"
        tools:ignore="LabelFor,RtlHardcoded" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerButton"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/phoneNumber"
        android:layout_alignEnd="@+id/phoneNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:textColor="@color/white"
        android:background="@drawable/special_button"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />



</RelativeLayout>
