<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bubble_layout_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/bubble_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/incoming"
        android:orientation="vertical"
        android:weightSum="1"
        android:minWidth="24dp"
        android:gravity="start"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/message_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_incoming_name"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="start" />

        <TextView
            android:id="@+id/message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incoming_message"
            android:minWidth="24dp"
            android:textColor="@color/white" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:weightSum="1"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:id="@+id/imageViewRead"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/time"
                android:id="@+id/textViewMsgTime"
                android:textSize="9sp"
                android:layout_marginLeft="2dp"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded,SmallSp" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>