<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/conv_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@drawable/gradient"
        android:gravity="left"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:ignore="RtlHardcoded">

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:id="@+id/imageView2"
            android:src="@drawable/ic_arrow_back_24dp"
            android:layout_marginLeft="5dp"
            android:tint="@color/white"
            android:background="@null"
            android:onClick="onBackPressed"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="59dp"
            android:layout_height="match_parent"
            android:id="@+id/conversationUserImage"
            android:src="@drawable/user_icon"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="1dp"
            android:padding="10dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/headerText"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/user"
                android:layout_marginTop="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/status"
                android:id="@+id/userState"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:id="@+id/right">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:id="@+id/imageView3"
                android:layout_gravity="right"
                android:src="@drawable/ic_more_vert_24dp"
                android:tint="@color/white"
                android:visibility="gone"
                android:layout_marginRight="20dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/msgListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/form"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:paddingBottom="10dp"
        android:text="@string/hello_world"
        android:layout_below="@+id/header"
        />

    <ProgressBar
        android:id="@+id/pb_sending_file"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_above="@id/form"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:weightSum="1"
        tools:ignore="RtlHardcoded"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.96">

            <EditText
                android:id="@+id/messageEditText"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="10sp"
                android:paddingRight="45dp"
                android:background="@drawable/bubble"
                android:ems="10"
                android:hint="@string/type_message"
                android:maxHeight="50dp"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded"
                android:layout_alignParentTop="true" />

            <ImageButton
                android:id="@+id/imageView4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="sendFile"
                android:src="@drawable/ic_attach_file_24dp"
                android:visibility="visible"
                tools:ignore="ContentDescription"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/white" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/sendMessageButton"
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:background="@drawable/send_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="sendTextMessage"
            tools:ignore="ContentDescription,RtlHardcoded" />


    </LinearLayout>


</RelativeLayout>