<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@color/colorPrimaryDark"
        android:gravity="left"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:ignore="RtlHardcoded">

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:id="@+id/imageView2"
            android:src="@drawable/ic_arrow_back_24dp"
            android:layout_marginLeft="5dp"
            android:tint="@color/white"
            android:background="@null"
            android:onClick="onBackPressed"
            android:contentDescription=""
            tools:ignore="ContentDescription,RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/new_group"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/add_participants"
                android:paddingTop="5sp"
                android:textSize="11sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded,SmallSp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextGroupName"
            style="@style/Widget.AppCompat.EditText"
            android:hint="@string/group_name"
            android:textCursorDrawable="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="110sp">

        <ListView
            android:id="@+id/groupListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"></ListView>


    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:onClick="onCreateGroup"
        android:scaleType="fitXY"
        android:src="@drawable/checked_64"
        android:visibility="visible"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="24dp"
        app:fabSize="mini"
        tools:ignore="RelativeOverlap,RtlHardcoded"
        tools:targetApi="lollipop" />


</RelativeLayout>
